--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython</artifactId>
+			<version>2.7.3</version>
+		</dependency>
 
 		<!-- @Inject -->
 		<dependency>
